ちょっと綺麗に

--- a/assets/ejs/common/_footer.ejs
+++ b/assets/ejs/common/_footer.ejs
@@ -1,6 +1,6 @@
 <footer class="container">
   <ul class="row">
-    <li class="col lg12 copyright">© <time id="now"></time>nekonyan.</li>
+    <li class="col copyright">©2016 nekonyan.</li>
   </ul>
 </footer>
 <script src="js/main.js"></script>
