--- a/assets/ejs/common/_header.ejs
+++ b/assets/ejs/common/_header.ejs
@@ -4,5 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>descartes-sandbox</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="style/descartes.js"></script>
 </head>
