--- a/assets/ejs/common/_main.ejs
+++ b/assets/ejs/common/_main.ejs
@@ -1,7 +1,10 @@
 <main class="container">
   <ul class="row">
     <% for(var i = 1; i < 7; i++) { %>
-    <li class="col cat"><span class="delete">消す</span><img src="img/cat<%= i %>.jpg" class="responsive-img"></li>
+    <li class="col cat">
+      <span class="delete"><i class="material-icons close">close</i></span>
+      <img src="img/cat<%= i %>.jpg" class="responsive-img"
+      ></li>
     <% } %>
   </ul>
 </main>
